[FIX] project_todo: display only one scrollbar in todo
Issue:
=====
double scrollbar appears in notes.

Steps to reproduce the issue:
=============================
- Go to notes
- Insert a table
- Add some columns and try to stretch the last one to the right until it
  goes outside the width of the editable.
- Click on the last cell to the right in the table and scroll left
- Another scrollbar will appear.

Origin of the issue:
====================
The part of the table that is invisible in the editor is considered as
overflow for the `html_field` so it will show a scrollbar which is not
needed since we already have a scrollbar in the edtibale.

Solution:
=========
We mark hide the overflow in `html_field` and let the editable takes
care of the overflow.

task-3721794

closes odoo/odoo#160933

X-original-commit: c98c58301da82ad896e296b9bbbdf6bbb0bc2a8e

--- a/addons/project_todo/static/src/scss/todo.scss
+++ b/addons/project_todo/static/src/scss/todo.scss
@@ -47,6 +47,10 @@
             padding: $o-sheet-vpadding $o-horizontal-padding;
         }
     }
+
+    .oe_description {
+        overflow-x: hidden;
+    }
 }
 .o_todo_kanban_card_body {
     padding-left: 9px;
